--- a/gwu_fastapi_mysite-main (2)/gwu_fastapi_mysite-main/gwu_fastapi_mysite-main/gwu_fastapi_mysite/templates/home.html
+++ b/gwu_fastapi_mysite-main (2)/gwu_fastapi_mysite-main/gwu_fastapi_mysite-main/gwu_fastapi_mysite/templates/home.html
@@ -36,8 +36,6 @@
                 </div><!--End off container -->
             </section> <!--End off Home Sections-->
 
-
-
             <!--Featured Section-->
             <section id="features" class="features">
                 <div class="container">
@@ -49,7 +47,7 @@
                                         <i class="fa fa-thumbs-o-up"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>개인화</h3>
+                                        <h3>인재상</h3>
                                         <p>데이터를 기반으로 개인의 운전에 대한 활동을 제공합니다.</p>
                                     </div>
                                 </div>
@@ -82,65 +80,28 @@
                 </div><!-- End off container -->
             </section><!-- End off Featured Section-->
 
-
-            <!--Business Section-->
-            <section id="business" class="business bg-grey roomy-70">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_business">
-                            <div class="col-md-6">
-                                <div class="business_slid">
-                                    <div class="slid_shap bg-grey"></div>
-                                    <div class="business_items text-center, style="text-align: left;">
-                                        <div class="business_item">
-                                            <div class="business_img">
-                                                <p></p>
-                                                <p></p>
-                                                <h2 class="text-uppercase"><strong>경영 목표</strong> </h2>
-                                                      </ul>
-                                                    <p class="m-top-20">인재와 기술을 바탕으로 최고의 서비스를 창출하여 인류사회에 공헌하는 것,
-                                                    <p class="m-top-20"> 저희회사가 추구하는 궁극적인 목표입니다.</p>
-                                                    <ul>
-                                                        <li><i class="fa fa-arrow-circle-right"></i> 인재와 기술을 바탕으로</li>
-                                                        <li><i class="fa  fa-arrow-circle-right"></i> 최고의 제품과 서비스를 창출하여</li>
-                                                        <li><i class="fa  fa-arrow-circle-right"></i> 인류사회에 공헌한다.</li>
-                                                <!-- 텍스트 대체<img src="assets/images/slider-img.png" alt="" />-->
-                                            </div>
-                                        </div>
-
-                                        <div class="business_item">
-                                            <div class="business_img">
-                                                <img src="assets/images/about-img1.jpg" alt="" />
-                                            </div>
-                                        </div>
-
-                                        <div class="business_item">
-                                            <div class="business_img">
-                                                <img src="assets/images/about-img1.jpg" alt="" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
               -------------------------
-                            <div class="col-md-6">
+              <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-11">
                                 <div class="business_item sm-m-top-50">
                                     <h2 class="text-uppercase"><strong>소개</strong> </h2>
-                                    <ul>
-                                        <li><i class="fa fa-arrow-circle-right"></i> Clean & Modern Design</li>
-                                        <li><i class="fa  fa-arrow-circle-right"></i> Fully Responsive</li>
-                                        <li><i class="fa  fa-arrow-circle-right"></i> Google Fonts</li>
                                     </ul>
-                                    <p class="m-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque eleifend in mi
-                                        sit amet mattis suspendisse ac ligula volutpat nisl rhoncus sagittis cras suscipit
-                                        lacus quis erat malesuada lobortis eiam dui magna volutpat commodo eget pretium vitae
-                                        elit etiam luctus risus urna in malesuada ante convallis.</p>
+                                    <p class="m-top-20">저희 회사는 ai기술을 활용하여 도로교통에 대한 문제를 해결하기 위해 개발한 프로그램입니다.
+                                                        저희는 다양한 분야에서 깊은 전문 지식을 보유하고 있으며, <br>이를 기반으로 고객들들이 믿을 수 있는 정보를 제공합니다.</p>
+                                    <ul>
+                                        <li><i class="fa fa-arrow-circle-right"></i> 개인화
+                                            <br>데이터를 기반으로 개인의 운전에 대한 활동을 제공합니다.</li>
+                                        <li><i class="fa  fa-arrow-circle-right"></i> 핵심
+                                            <br>앞으로 국내를 넘어 더 넓은 세계로 퍼져 음주운전이 일어나지 않는 세상을 만들어갑니다.  </li>
+                                        <li><i class="fa  fa-arrow-circle-right"></i> 혁신
+                                            <br>사람을 위한 인간중심 기술 혁신을 지향합니다.</li>
 
-                                    <div class="business_btn">
-                                        <a href="" class="btn btn-default m-top-20">Read More</a>
-                                        <a href="" class="btn btn-primary m-top-20">Buy Now</a>
-                                    </div>
+                                    </ul>
+                                    <p class="m-top-20">- 우리는 인공지능의 확산 속에서 기계와 사람이 상호작용하는 시대에 살고 있습니다.
+                                                    <br>- AI기술을 활용하여 사회적 문제 중 하나인 음주운전을 예방하면 좋을 것 같아 이 프로그램을 개발하게 되었습니다.
+                                                    <br>- AI은 사람을 대체하는 것이 아니라, 사람이 편안한 삶을 가질 수 있도록 도와주는 기술입니다. </p>
 
                                 </div>
                             </div>
@@ -149,15 +110,20 @@
                 </div>
             </section><!-- End off Business section -->
 
+<br>
+<br>
+<br>
+<br>
            <!--Test section-->
-            <section id="test" class="test bg-grey roomy-60 fix">
+            <section id="test" class="test bg-grey roomy-20 fix">
                 <div class="container">
                     <div class="row">
                         <div class="main_test fix">
 
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="head_title text-center fix">
-                                    <h2 class="text-uppercase">개발자</h2>
+                                    <h2 class="text-uppercase"><p></p>
+                                        <br>개발자</h2>
                                     <h5><!--개발자 밑에 설명--> </h5>
                                 </div>
                             </div>
